<resources>
    <string name="app_name">Product Saver</string>
    <string name="mot_cle">Mot cle</string>
    <string name="designation">Designation</string>
    <string name="description">Description</string>
    <string name="price">Prix</string>
    <string name="quantite_demand">Quantité disponble</string>
    <string name="alert_quantity">Quantité d\'alerte</string>
    <string name="add">Ajouter</string>
    <string name="title">Ce formulaire vous permet de créer un produit en un instant</string>
    <string name="title_info">Informations sur le produit</string>
    <string name="settings">Parametres</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
</resources>