<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:padding="@dimen/normal_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/hello_size"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation"
                    android:inputType="textCapWords"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:maxLength="50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:minLines="3" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/qteD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantite_demand"
                    android:inputType="number"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/qteA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alert_quantity"
                    android:inputType="number"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/myBtn"
                android:padding="8dp"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>